manifests/monitoring/prometheus/base/deployment.yaml
# Copyright 2016-2019 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations: {}
  name: prometheus
spec:
  replicas: 1
  template:
    spec:
      serviceAccount: prometheus
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: zeiot/prometheus:v2.8.0.arm64
          imagePullPolicy: Always
          command:
          - "/bin/prometheus"
          args:
            - "--config.file=/config/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.console.libraries=/usr/share/prometheus/console_libraries"
            - "--web.console.templates=/usr/share/prometheus/consoles"
            - "--storage.tsdb.retention=5w"
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 40
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 40
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: "/prometheus"
            - name: config
              mountPath: "/config"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prometheus-data
        - name: config
          configMap:
            name: prometheus
            items:
              - key: prometheus.yml
                path: prometheus.yml
