manifests/monitoring/prometheus/base/statefulset.yaml
# Copyright (C) 2016, 2019 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: "prometheus"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    spec:
      serviceAccountName: prometheus
      securityContext:
        fsGroup: 1000
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        command:
        - "/bin/prometheus"
        args:
        - "--config.file=/etc/prometheus/config/prometheus.yml"
        - "--storage.tsdb.path=/prometheus"
        - "--web.console.libraries=/usr/share/prometheus/console_libraries"
        - "--web.console.templates=/usr/share/prometheus/consoles"
        - "--storage.tsdb.retention=5w"
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 40
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 9090
          initialDelaySeconds: 30
          periodSeconds: 3
          failureThreshold: 40
        ports:
        - containerPort: 9090
          name: prometheus
        volumeMounts:
        - mountPath: /prometheus
          name: data-volume
        - mountPath: "/etc/prometheus/config"
          name: config-volume
        - mountPath: "/etc/prometheus/job-rules"
          name: job-rules-volume
        - mountPath: "/etc/prometheus/alert-rules"
          name: alert-rules-volume
        resources:
          requests:
            memory: "1500Mi"
            cpu: "1000m"
          limits:
            memory: "1500Mi"
            cpu: "2000m"
      volumes:
      - name: data-volume
          persistentVolumeClaim:
            claimName: prometheus-data
      - configMap:
          name: prometheus
        name: config-volume
      - configMap:
          name: prometheus-alert-rules
        name: alert-rules-volume
      - configMap:
          name: prometheus-job-rules
        name: job-rules-volume
